--- a/notebook/Supply_Demand_Modelling.ipynb
+++ b/notebook/Supply_Demand_Modelling.ipynb
@@ -1541,7 +1541,7 @@
         "id": "386599a0"
       },
       "source": [
-        "### 5.1) EDA Part 1: Visuals (Trends, Storage, Seasonality, Spreads, Balances)EDA Part 1: Visuals (Trends, Storage, Seasonality, Spreads, Balances)"
+        "### 5.1) EDA Part 1: Visuals (Trends, Storage, Seasonality, Spreads, Balances)"
       ]
     },
     {
