--- a/notebook/Supply_Demand_Modelling.ipynb
+++ b/notebook/Supply_Demand_Modelling.ipynb
@@ -89,7 +89,7 @@
         "4. Execution and column renaming for better understanding of data\n",
         "4. Exploratory Data Analysis (EDA)\n",
         "5. Feature Engineering and Supply Demand ML Model Pipeline\n",
-        "8. SHAP Explainability & Scenario Analysis — Net Supply Position (NSP)"
+        "8. SHAP Analysis"
       ]
     },
     {
